[SMT]: Add Product operation